updated all jupyterlab notebooks

--- a/notebooks/plot_encoding_model_fits/plot_sketch_tokens.ipynb
+++ b/notebooks/plot_encoding_model_fits/plot_sketch_tokens.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9f8c3942",
+   "id": "5a4adfcf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "344a2193",
+   "id": "26fbbc6b",
    "metadata": {},
    "outputs": [
     {
@@ -30,67 +30,52 @@
      "text": [
       "loading from /user_data/mmhender/imStat/model_fits/S01/sketch_tokens/Feb-05-2022_2057_02/all_fit_params.npy\n",
       "\n",
-      "dict_keys(['subject', 'volume_space', 'fitting_types', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'which_prf_grid', 'models', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'ridge', 'debug', 'up_to_sess', 'single_sess', 'shuff_rnd_seed', 'use_precomputed_prfs', 'saved_prfs_fn', 'best_layer_each_voxel', 'saved_best_layer_fn', 'voxel_subset_is_done_trn', 'voxel_subset_is_done_val', 'corr_each_feature', 'sem_discrim_each_axis', 'sem_corr_each_axis', 'discrim_type_list', 'use_pca_st_feats'])\n",
-      "subject = 1\n",
-      "volume_space = True\n",
-      "fitting_types: len 1\n",
-      "voxel_mask: shape (699192,)\n",
-      "brain_nii_shape: shape (3,)\n",
-      "image_order: shape (30000,)\n",
-      "voxel_index: len 1\n",
-      "voxel_roi: len 4\n",
-      "voxel_ncsnr: shape (699192,)\n",
-      "which_prf_grid = 5\n",
-      "models: shape (1456, 3)\n",
-      "best_losses: shape (19738, 1)\n",
-      "best_lambdas: shape (19738, 1)\n",
-      "best_params: len 6\n",
-      "lambdas: shape (9,)\n",
-      "val_cc: shape (19738, 1)\n",
-      "val_r2: shape (19738, 1)\n",
-      "partial_masks: len 1\n",
-      "partial_version_names: len 1\n",
-      "zscore_features = True\n",
-      "ridge = True\n",
-      "debug = False\n",
-      "up_to_sess = 40\n",
-      "single_sess = 0\n",
-      "shuff_rnd_seed = 572005\n",
-      "use_precomputed_prfs = True\n",
-      "saved_prfs_fn = /user_data/mmhender/imStat/model_fits/S01/alexnet_all_conv_pca/Nov-23-2021_2247_09/all_fit_params.npy\n",
-      "voxel_subset_is_done_trn: shape (1,)\n",
-      "voxel_subset_is_done_val: shape (1,)\n",
-      "corr_each_feature: shape (19738, 150)\n",
-      "sem_discrim_each_axis: shape (19738, 59)\n",
-      "sem_corr_each_axis: shape (19738, 59)\n",
-      "discrim_type_list: len 59\n",
-      "use_pca_st_feats = False\n"
+      "dict_keys(['subject', 'volume_space', 'fitting_types', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'which_prf_grid', 'models', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'ridge', 'debug', 'up_to_sess', 'single_sess', 'shuff_rnd_seed', 'use_precomputed_prfs', 'saved_prfs_fn', 'best_layer_each_voxel', 'saved_best_layer_fn', 'voxel_subset_is_done_trn', 'voxel_subset_is_done_val', 'corr_each_feature', 'sem_discrim_each_axis', 'sem_corr_each_axis', 'discrim_type_list', 'n_sem_samp_each_axis', 'use_pca_st_feats'])\n",
+      "loading from /user_data/mmhender/imStat/model_fits/S02/sketch_tokens/Feb-25-2022_1151_14/all_fit_params.npy\n",
+      "\n",
+      "dict_keys(['subject', 'volume_space', 'fitting_types', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'which_prf_grid', 'models', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'ridge', 'debug', 'up_to_sess', 'single_sess', 'shuff_rnd_seed', 'use_precomputed_prfs', 'saved_prfs_fn', 'best_layer_each_voxel', 'saved_best_layer_fn', 'voxel_subset_is_done_trn', 'voxel_subset_is_done_val', 'corr_each_feature', 'use_pca_st_feats'])\n",
+      "loading from /user_data/mmhender/imStat/model_fits/S03/sketch_tokens/Feb-25-2022_1313_51/all_fit_params.npy\n",
+      "\n",
+      "dict_keys(['subject', 'volume_space', 'fitting_types', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'which_prf_grid', 'models', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'ridge', 'debug', 'up_to_sess', 'single_sess', 'shuff_rnd_seed', 'use_precomputed_prfs', 'saved_prfs_fn', 'best_layer_each_voxel', 'saved_best_layer_fn', 'voxel_subset_is_done_trn', 'voxel_subset_is_done_val', 'corr_each_feature', 'use_pca_st_feats'])\n",
+      "loading from /user_data/mmhender/imStat/model_fits/S04/sketch_tokens/Feb-25-2022_1420_57/all_fit_params.npy\n",
+      "\n",
+      "dict_keys(['subject', 'volume_space', 'fitting_types', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'which_prf_grid', 'models', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'ridge', 'debug', 'up_to_sess', 'single_sess', 'shuff_rnd_seed', 'use_precomputed_prfs', 'saved_prfs_fn', 'best_layer_each_voxel', 'saved_best_layer_fn', 'voxel_subset_is_done_trn', 'voxel_subset_is_done_val', 'corr_each_feature', 'use_pca_st_feats'])\n",
+      "loading from /user_data/mmhender/imStat/model_fits/S05/sketch_tokens/Feb-25-2022_1517_57/all_fit_params.npy\n",
+      "\n",
+      "dict_keys(['subject', 'volume_space', 'fitting_types', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'which_prf_grid', 'models', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'ridge', 'debug', 'up_to_sess', 'single_sess', 'shuff_rnd_seed', 'use_precomputed_prfs', 'saved_prfs_fn', 'best_layer_each_voxel', 'saved_best_layer_fn', 'voxel_subset_is_done_trn', 'voxel_subset_is_done_val', 'corr_each_feature', 'use_pca_st_feats'])\n",
+      "loading from /user_data/mmhender/imStat/model_fits/S06/sketch_tokens/Feb-25-2022_1630_57/all_fit_params.npy\n",
+      "\n",
+      "dict_keys(['subject', 'volume_space', 'fitting_types', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'which_prf_grid', 'models', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'ridge', 'debug', 'up_to_sess', 'single_sess', 'shuff_rnd_seed', 'use_precomputed_prfs', 'saved_prfs_fn', 'best_layer_each_voxel', 'saved_best_layer_fn', 'voxel_subset_is_done_trn', 'voxel_subset_is_done_val', 'corr_each_feature', 'use_pca_st_feats'])\n",
+      "loading from /user_data/mmhender/imStat/model_fits/S07/sketch_tokens/Feb-25-2022_1739_38/all_fit_params.npy\n",
+      "\n",
+      "dict_keys(['subject', 'volume_space', 'fitting_types', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'which_prf_grid', 'models', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'ridge', 'debug', 'up_to_sess', 'single_sess', 'shuff_rnd_seed', 'use_precomputed_prfs', 'saved_prfs_fn', 'best_layer_each_voxel', 'saved_best_layer_fn', 'voxel_subset_is_done_trn', 'voxel_subset_is_done_val', 'corr_each_feature', 'use_pca_st_feats'])\n",
+      "loading from /user_data/mmhender/imStat/model_fits/S08/sketch_tokens/Feb-25-2022_1846_59/all_fit_params.npy\n",
+      "\n",
+      "dict_keys(['subject', 'volume_space', 'fitting_types', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'which_prf_grid', 'models', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'ridge', 'debug', 'up_to_sess', 'single_sess', 'shuff_rnd_seed', 'use_precomputed_prfs', 'saved_prfs_fn', 'best_layer_each_voxel', 'saved_best_layer_fn', 'voxel_subset_is_done_trn', 'voxel_subset_is_done_val', 'corr_each_feature', 'use_pca_st_feats'])\n"
      ]
     }
    ],
    "source": [
     "# Load results of the fitting procedure\n",
     "\n",
-    "subject = 1\n",
-    "volume_space=True\n",
+    "subjects = np.arange(1,9)\n",
+    "n_subjects = len(subjects)\n",
+    "\n",
     "fitting_type = 'sketch_tokens'\n",
+    "out = [load_fits.load_fit_results(subject=ss, fitting_type=fitting_type, n_from_end=0, \\\n",
+    "                                  verbose=True) \\\n",
+    "       for ss in subjects]\n",
+    "fig_save_folder=None\n",
     "\n",
-    "out = load_fits.load_fit_results(subject, fitting_type, n_from_end=0, verbose=True);\n",
-    "load_fits.print_output_summary(out)\n",
-    "\n",
-    "roi_def = roi_utils.get_combined_rois(subject,include_all=True,include_body=True,volume_space=True,verbose=False) \n",
-    "\n",
-    "skip_inds = [10,11,15,23]\n",
-    "retlabs, facelabs, placelabs, bodylabs, \\\n",
-    "        ret_names, face_names, place_names, body_names = roi_def\n",
-    "\n",
-    "fig_save_folder = None"
+    "skip_inds = [4,5,7,11,12, 19,20, 22, 24]\n",
+    "roi_def = roi_utils.multi_subject_roi_def(subjects, skip_areas=skip_inds)\n",
+    "roi_names =roi_def.roi_names\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "18712a88",
+   "id": "1182aad0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "98b8b097",
+   "id": "64bc1f32",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bd53fd34",
+   "id": "350f261d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ea16d716",
+   "id": "43ae51c5",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "733fe031",
+   "id": "a27355e9",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c232cc5f",
+   "id": "81bfc315",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "24214018",
+   "id": "79c4c314",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c6b2a06b",
+   "id": "7704c083",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b2b34bfb",
+   "id": "e7cc85c0",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9bae739e",
+   "id": "e305a7c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "163a7111",
+   "id": "2ec8373e",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f73e8a06",
+   "id": "27867352",
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a4bbae66",
+   "id": "1451959c",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ca33504c",
+   "id": "3df9e5af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "257bc3d3",
+   "id": "37bb3c87",
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b1b3866b",
+   "id": "bf3a0bc4",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "387f42ac",
+   "id": "9ebda1b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "594fa807",
+   "id": "6f8e4a76",
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "6cefec28",
+   "id": "7183c572",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "b6004b09",
+   "id": "8154c134",
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "c73830dc",
+   "id": "c2658e43",
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "54c93509",
+   "id": "964c8f15",
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "e191f34b",
+   "id": "58c34cb3",
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "8f7e650f",
+   "id": "1fe70922",
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "51eb685d",
+   "id": "43690790",
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "8febb9a2",
+   "id": "cb01f3dd",
    "metadata": {},
    "outputs": [
     {
