--- a/notebooks/plot_other_analyses/feature_semantic_discrim.ipynb
+++ b/notebooks/plot_other_analyses/feature_semantic_discrim.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "2a0cf58e",
+   "execution_count": 2,
+   "id": "625366a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,35 +25,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "6dfe767b",
+   "execution_count": 3,
+   "id": "27f00812",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number of pRFs: 1456\n",
-      "most extreme RF positions:\n",
-      "[2.7755576e-17 0.0000000e+00 2.0000000e-02]\n",
-      "[ 0.7698996  -0.31890285  1.        ]\n",
       "loading from /user_data/mmhender/features/gabor_texture/feature_stats/S1_gabor_solo_semantic_corrs_grid5.npy and /user_data/mmhender/features/gabor_texture/feature_stats/S1_gabor_solo_semantic_discrim_tstat_grid5.npy and /user_data/mmhender/features/gabor_texture/feature_stats/S1_gabor_solo_nsamp_grid5.npy\n",
-      "avg first 96 features\n",
-      "loading from /user_data/mmhender/features/pyramid_texture/feature_stats/S1_pyramid_texture_ll_semantic_corrs_grid5.npy and /user_data/mmhender/features/pyramid_texture/feature_stats/S1_pyramid_texture_ll_semantic_discrim_tstat_grid5.npy and /user_data/mmhender/features/pyramid_texture/feature_stats/S1_pyramid_texture_ll_nsamp_grid5.npy\n",
-      "avg first 49 features\n",
-      "loading from /user_data/mmhender/features/pyramid_texture/feature_stats/S1_pyramid_texture_hl_pca_semantic_corrs_grid5.npy and /user_data/mmhender/features/pyramid_texture/feature_stats/S1_pyramid_texture_hl_pca_semantic_discrim_tstat_grid5.npy and /user_data/mmhender/features/pyramid_texture/feature_stats/S1_pyramid_texture_hl_pca_nsamp_grid5.npy\n",
-      "avg first 5 features\n",
-      "loading from /user_data/mmhender/features/sketch_tokens/feature_stats/S1_sketch_tokens_semantic_corrs_grid5.npy and /user_data/mmhender/features/sketch_tokens/feature_stats/S1_sketch_tokens_semantic_discrim_tstat_grid5.npy and /user_data/mmhender/features/sketch_tokens/feature_stats/S1_sketch_tokens_nsamp_grid5.npy\n",
-      "avg first 150 features\n",
-      "loading from /user_data/mmhender/features/alexnet/feature_stats/S1_alexnet_semantic_corrs_grid5.npy and /user_data/mmhender/features/alexnet/feature_stats/S1_alexnet_semantic_discrim_tstat_grid5.npy and /user_data/mmhender/features/alexnet/feature_stats/S1_alexnet_nsamp_grid5.npy\n",
-      "avg first 5 features\n",
-      "loading from /user_data/mmhender/features/CLIP/feature_stats/S1_clip_semantic_corrs_grid5.npy and /user_data/mmhender/features/CLIP/feature_stats/S1_clip_semantic_discrim_tstat_grid5.npy and /user_data/mmhender/features/CLIP/feature_stats/S1_clip_nsamp_grid5.npy\n",
-      "avg first 5 features\n"
+      "avg first 96 features\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "could not broadcast input array from shape (55,1456) into shape (56,1456)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-65902dd98d49>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     55\u001b[0m         \u001b[0mfeats2use\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcorr_result\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 57\u001b[0;31m     \u001b[0mavg_corrs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mff\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcorr_result\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfeats2use\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     58\u001b[0m     \u001b[0mavg_tstats\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mff\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtstat_result\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfeats2use\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m     \u001b[0mmax_corrs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mff\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcorr_result\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: could not broadcast input array from shape (55,1456) into shape (56,1456)"
      ]
     }
    ],
    "source": [
-    "# load LDA results\n",
+    "# load semantic discrim results\n",
+    "\n",
     "subject = 1\n",
     "which_prf_grid = 5\n",
     "# Params for the spatial aspect of the model (possible pRFs)\n",
@@ -121,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d77ea802",
+   "id": "c223a496",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "bb80335e",
+   "id": "eb3d6113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "734dabe5",
+   "id": "ac52778c",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "08197944",
+   "id": "3becf7a6",
    "metadata": {},
    "outputs": [
     {
