updating all jupyter notebooks

--- a/notebooks/plot_other_analyses/voxel_semantic_selectivity_clip.ipynb
+++ b/notebooks/plot_other_analyses/voxel_semantic_selectivity_clip.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "e5dc9984",
+   "execution_count": 6,
+   "id": "e0a5d9ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,15 +23,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "d68640b8",
+   "execution_count": 7,
+   "id": "bd63a395",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load results of the fitting procedure\n",
     "\n",
-    "# subjects = np.arange(1,9)\n",
-    "subjects = [1,2]\n",
+    "subjects = np.arange(1,9)\n",
+    "# subjects = [1,2]\n",
     "n_subjects = len(subjects)\n",
     "\n",
     "feature_type_list_long = ['clip_RN50_best_layer_pca']\n",
@@ -119,8 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "129f038d",
+   "execution_count": 8,
+   "id": "7e35d66a",
    "metadata": {},
    "outputs": [
     {
@@ -185,8 +185,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "db2b0a9a",
+   "execution_count": 9,
+   "id": "368e3c2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,15 +199,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "e19b1d0d",
+   "execution_count": 11,
+   "id": "237357ac",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/mmhender/myenv/lib/python3.7/site-packages/ipykernel_launcher.py:31: RuntimeWarning: invalid value encountered in sqrt\n"
+      "/home/mmhender/myenv/lib/python3.7/site-packages/ipykernel_launcher.py:22: RuntimeWarning: invalid value encountered in sqrt\n"
      ]
     },
     {
@@ -240,15 +240,6 @@
     "\n",
     "for si, ss in enumerate(subjects):\n",
     "    \n",
-    "    best_ecc_deg, best_angle_deg, best_size_deg = plot_prf_params.get_prf_pars_deg(out[si], screen_eccen_deg=8.4)\n",
-    "\n",
-    "    names += ['S%d: pRF eccentricity'%ss, 'S%d: pRF angle'%ss, \\\n",
-    "             'S%d: pRF size'%ss]\n",
-    "    maps += [best_ecc_deg, best_angle_deg, best_size_deg]\n",
-    "    cmaps += ['PRGn', 'Retinotopy_RYBCR', 'PRGn']\n",
-    "    mins += [0,0,0]\n",
-    "    maxes += [9, 360, 10]\n",
-    "\n",
     "    names += ['S%d: CLIP fit performance (sqrt R2)'%ss]\n",
     "    maps += [np.sqrt(out[si]['val_r2'][:,0])]\n",
     "    cmaps += ['PuBu']\n",
@@ -289,7 +280,10 @@
     "        maps += [tvals]\n",
     "        names += ['S%d: %s (abs t)'%(ss,group_names[dd])]\n",
     "        mins += [0]\n",
-    "        maxes += [15]\n",
+    "        if dd<5:\n",
+    "            maxes += [30]\n",
+    "        else:\n",
+    "            maxes += [15]\n",
     "        cmaps += ['PuBu']\n",
     "        \n",
     "    r2_thresh = 0.01\n",
@@ -325,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "bddea38b",
+   "id": "8fbf4015",
    "metadata": {
     "tags": []
    },
@@ -398,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "a3307d35",
+   "id": "96137ffd",
    "metadata": {
     "tags": []
    },
@@ -490,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "6873cf33",
+   "id": "dea23e51",
    "metadata": {
     "tags": []
    },
@@ -568,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "cc5eeac0",
+   "id": "18b90e3a",
    "metadata": {
     "tags": []
    },
@@ -641,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b147de84",
+   "id": "234d43f2",
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "c3c3a7a4",
+   "id": "1f1a703b",
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "3811404b",
+   "id": "c874c859",
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ad1d0b22",
+   "id": "4c008eb9",
    "metadata": {},
    "outputs": [
     {
