updating notebooks/renaming some notebook folders

--- a/notebooks/misc/coco_counts.ipynb
+++ b/notebooks/misc/coco_counts.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "26034236",
+   "execution_count": 1,
+   "id": "aee849dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "6746e912",
+   "id": "11fcf778",
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d84795b7",
+   "id": "0320c484",
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d6dd9c5a",
+   "id": "f4e952a3",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "3c26d993",
+   "id": "e45f58fa",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "40f0e9b6",
+   "id": "abdbf238",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "e0fc6329",
+   "id": "0b0d60a1",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0a55d2f0",
+   "id": "63dbdcf1",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5fd286d9",
+   "id": "691e9867",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b7585d4a",
+   "id": "9d746726",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c7e0485d",
+   "id": "03ae07b8",
    "metadata": {},
    "outputs": [
     {
@@ -353,6 +353,119 @@
    ],
    "source": [
     "out['things_cat_counts'][:,0,:].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6bc2f56f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "has_indoor = []\n",
+    "has_outdoor = []\n",
+    "for subject in np.arange(1,9):\n",
+    "    \n",
+    "    fn2load = os.path.join(default_paths.stim_labels_root, \\\n",
+    "                                          'S%d_indoor_outdoor.csv'%subject)\n",
+    "    indoor_outdoor_df = pd.read_csv(fn2load, index_col=0)\n",
+    "    has_indoor.append(np.array(indoor_outdoor_df['has_indoor']))\n",
+    "    has_outdoor.append(np.array(indoor_outdoor_df['has_outdoor']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7e3b9b68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "has_indoor = np.concatenate(has_indoor, axis=0)\n",
+    "has_outdoor = np.concatenate(has_outdoor, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "cc680531",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.016275"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(has_indoor & has_outdoor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7b788e56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0615375"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(~has_indoor & ~has_outdoor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e8b8d093",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2957875"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(has_indoor & ~has_outdoor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ac0461ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6264"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(has_outdoor & ~has_indoor)"
    ]
   }
  ],
