--- a/notebooks/plot_fit_accuracy/plot_midlevel_semantic_clip.ipynb
+++ b/notebooks/plot_fit_accuracy/plot_midlevel_semantic_clip.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "270b30a8",
+   "execution_count": 13,
+   "id": "29a8b03b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,20 +20,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "9a464aa6",
+   "execution_count": 17,
+   "id": "17f3df80",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading from /user_data/mmhender/imStat/model_fits/S01/full_midlevel_plus_all_coco_categ_plus_clip_RN50_best_layer_pca/Feb-25-2022_1828_00/all_fit_params.npy\n",
-      "\n",
-      "dict_keys(['subject', 'volume_space', 'fitting_types', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'which_prf_grid', 'models', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'ridge', 'debug', 'up_to_sess', 'single_sess', 'shuff_rnd_seed', 'use_precomputed_prfs', 'saved_prfs_fn', 'best_layer_each_voxel', 'saved_best_layer_fn', 'voxel_subset_is_done_trn', 'voxel_subset_is_done_val', 'semantic_feature_set', 'use_pca_st_feats', 'use_pca_pyr_feats_hl', 'pyramid_feature_info', 'group_all_hl_feats', 'n_ori_gabor', 'n_sf_gabor', 'gabor_nonlin_fn', 'clip_layer_name', 'clip_model_architecture', 'use_pca_clip_feats'])\n",
-      "loading from /user_data/mmhender/imStat/model_fits/S02/full_midlevel_plus_all_coco_categ_plus_clip_RN50_best_layer_pca/Mar-03-2022_2027_46/all_fit_params.npy\n",
-      "\n",
-      "dict_keys(['subject', 'volume_space', 'fitting_types', 'voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'which_prf_grid', 'models', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'ridge', 'debug', 'up_to_sess', 'single_sess', 'shuff_rnd_seed', 'use_precomputed_prfs', 'saved_prfs_fn', 'best_layer_each_voxel', 'saved_best_layer_fn', 'voxel_subset_is_done_trn', 'voxel_subset_is_done_val', 'semantic_feature_set', 'use_pca_st_feats', 'use_pca_pyr_feats_hl', 'pyramid_feature_info', 'group_all_hl_feats', 'n_ori_gabor', 'n_sf_gabor', 'gabor_nonlin_fn', 'clip_layer_name', 'clip_model_architecture', 'use_pca_clip_feats'])\n"
+      "loading from /user_data/mmhender/imStat/model_fits/S03/full_midlevel_plus_all_coco_categ_plus_clip_RN50_best_layer_pca/Mar-09-2022_1206_49/all_fit_params.npy\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/user_data/mmhender/imStat/model_fits/S03/full_midlevel_plus_all_coco_categ_plus_clip_RN50_best_layer_pca/Mar-09-2022_1206_49/all_fit_params.npy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-efffa8cca746>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m out = [load_fits.load_fit_results(subject=ss, fitting_type=fitting_type, n_from_end=0, verbose=True) \\\n\u001b[0;32m---> 12\u001b[0;31m        for ss in subjects]\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0mfig_save_folder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-17-efffa8cca746>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m out = [load_fits.load_fit_results(subject=ss, fitting_type=fitting_type, n_from_end=0, verbose=True) \\\n\u001b[0;32m---> 12\u001b[0;31m        for ss in subjects]\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0mfig_save_folder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/user_data/mmhender/imStat/code/plotting/load_fits.py\u001b[0m in \u001b[0;36mload_fit_results\u001b[0;34m(subject, fitting_type, n_from_end, volume_space, verbose, root)\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'loading from %s\\n'\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0mfile2load\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m     \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile2load\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_pickle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     41\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/myenv/lib/python3.7/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding)\u001b[0m\n\u001b[1;32m    415\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    416\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 417\u001b[0;31m             \u001b[0mfid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menter_context\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos_fspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    418\u001b[0m             \u001b[0mown_fid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    419\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/user_data/mmhender/imStat/model_fits/S03/full_midlevel_plus_all_coco_categ_plus_clip_RN50_best_layer_pca/Mar-09-2022_1206_49/all_fit_params.npy'"
      ]
     }
    ],
@@ -41,7 +51,7 @@
     "# Load results of the fitting procedure\n",
     "\n",
     "# subjects = np.arange(1,9)\n",
-    "subjects = [1,2]\n",
+    "subjects = [3]\n",
     "# subjects=[1]\n",
     "n_subjects = len(subjects)\n",
     "\n",
@@ -61,8 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "e7c1bd41",
+   "execution_count": 15,
+   "id": "d7be2382",
    "metadata": {},
    "outputs": [
     {
@@ -70,9 +80,7 @@
      "output_type": "stream",
      "text": [
       "[ True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True]\n",
-      "[ True  True  True  True  True  True  True  True  True  True  True False\n",
-      " False False False False]\n"
+      "  True  True  True False]\n"
      ]
     }
    ],
@@ -83,8 +91,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "5f5ce599",
+   "execution_count": 16,
+   "id": "050aa24e",
    "metadata": {},
    "outputs": [
     {
@@ -92,9 +100,7 @@
      "output_type": "stream",
      "text": [
       "[ True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True]\n",
-      "[ True  True  True  True  True  True  True  True  True  True  True False\n",
-      " False False False False]\n"
+      "  True  True  True False]\n"
      ]
     }
    ],
@@ -105,8 +111,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "4398e8e1",
+   "execution_count": 5,
+   "id": "e4ccdf83",
    "metadata": {},
    "outputs": [
     {
@@ -127,11 +133,11 @@
        " 'leave_out_semantic_coco_things_categ',\n",
        " 'just_semantic_coco_stuff_categ',\n",
        " 'leave_out_semantic_coco_stuff_categ',\n",
-       " 'just_alexnet',\n",
-       " 'leave_out_alexnet']"
+       " 'just_clip',\n",
+       " 'leave_out_clip']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9bdc77df",
+   "id": "0ace2284",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1c30a736",
+   "id": "15800e56",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "1716b78c",
+   "id": "66b5fcad",
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2ba3c9bc",
+   "id": "7915e643",
    "metadata": {},
    "outputs": [
     {
