--- a/notebooks/labeling/test_indoor_outdoor_labeling.ipynb
+++ b/notebooks/labeling/test_indoor_outdoor_labeling.ipynb
@@ -2,10 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "id": "bcad44ad",
+   "execution_count": 1,
+   "id": "a26e2e3e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initializing coco api...\n",
+      "loading annotations into memory...\n",
+      "Done (t=0.72s)\n",
+      "creating index...\n",
+      "index created!\n",
+      "loading annotations into memory...\n",
+      "Done (t=15.85s)\n",
+      "creating index...\n",
+      "index created!\n",
+      "Initializing coco api...\n",
+      "loading annotations into memory...\n",
+      "Done (t=0.58s)\n",
+      "creating index...\n",
+      "index created!\n",
+      "loading annotations into memory...\n",
+      "Done (t=13.83s)\n",
+      "creating index...\n",
+      "index created!\n"
+     ]
+    }
+   ],
    "source": [
     "import sys, os\n",
     "import numpy as np\n",
@@ -22,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bd178950",
+   "id": "8cac007c",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "8e691215",
+   "id": "0dd7cc9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "dee78a34",
+   "id": "0ab38ac0",
    "metadata": {},
    "outputs": [
     {
@@ -148,18 +173,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "2193f6e8",
+   "execution_count": 2,
+   "id": "9562d6dc",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Loading images for subject 1\n",
-      "\n",
-      "image data size: (10000, 3, 240, 240) , dtype: uint8 , value range: 0 255\n"
+     "ename": "NameError",
+     "evalue": "name 'subject' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-49028a671a50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mims2load\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mimage_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnsd_utils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_image_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mimage_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnsd_utils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimage_uncolorize_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mims2load\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# image_data = image_data[ims2use,:,:,:]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mn_images\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimage_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'subject' is not defined"
      ]
     }
    ],
@@ -173,10 +199,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "4819394f",
+   "execution_count": 4,
+   "id": "5e5f2f8f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'subject' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-41f54bc3ffa9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m labels_folder = os.path.join(default_paths.stim_labels_root, 'S%d_within_prf_grid%d'%(subject, \\\n\u001b[0m\u001b[1;32m      2\u001b[0m                                                                                         which_prf_grid))\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mfn2load\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels_folder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'S%d_cocolabs_binary_prf%d.csv'\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubject\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprf_model_index\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'subject' is not defined"
+     ]
+    }
+   ],
    "source": [
     "labels_folder = os.path.join(default_paths.stim_labels_root, 'S%d_within_prf_grid%d'%(subject, \\\n",
     "                                                                                        which_prf_grid))\n",
@@ -204,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "2b42a2fc",
+   "id": "73770ca0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,18 +255,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "5a41fc5e",
+   "execution_count": 3,
+   "id": "1fc1dfe2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "169\n",
-      "3007\n",
-      "6208\n",
-      "616\n"
+     "ename": "NameError",
+     "evalue": "name 'has_outdoor' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-0eb2d1631f5a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhas_outdoor\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0mhas_indoor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m~\u001b[0m\u001b[0mhas_outdoor\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0mhas_indoor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhas_outdoor\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0;34m~\u001b[0m\u001b[0mhas_indoor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m~\u001b[0m\u001b[0mhas_outdoor\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0;34m~\u001b[0m\u001b[0mhas_indoor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'has_outdoor' is not defined"
      ]
     }
    ],
@@ -242,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "f618903c",
+   "id": "65f8ae19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "76a05dd7",
+   "id": "a9046d39",
    "metadata": {
     "tags": []
    },
@@ -321,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "be23fbe2",
+   "id": "a0b1c2c2",
    "metadata": {
     "tags": []
    },
@@ -389,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "d59b9e5a",
+   "id": "29feebc9",
    "metadata": {
     "tags": []
    },
@@ -435,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "866af594",
+   "id": "5fdb21ec",
    "metadata": {
     "tags": []
    },
@@ -503,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "aba2148f",
+   "id": "399bb286",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "8f69d927",
+   "id": "f408d887",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "8cf0973e",
+   "id": "716c43f5",
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "f09443b2",
+   "id": "55027b68",
    "metadata": {},
    "outputs": [
     {
